--- a/ParameterFiles/genericExtracts.yaml
+++ b/ParameterFiles/genericExtracts.yaml
@@ -1,11 +1,10 @@
-request2:
+request1:
     conditions:
-        Or:
-            assetNameLike: "Discounts"
-            attributeFilter:
-                - attributeTypeEquals: "Prioritized Attribute"
-                - attributeValueEquals: "Yes"
-            assetNameEquals: "Account"
+        assetNameIn:
+            - "FRY 14 Q"
+            - "B.01 — Securities 1 (“Main Schedule”)"
+            - "01. Amortized Cost (USD Equivalent)"
+            - "Amortized Cost (USD Equivalent)"
     outputResult:
         Asset Details: 
             - Asset Name
@@ -17,33 +16,52 @@ request2:
         Complex Relations: All  
     outputFileName: 'request1'
     email: "srikrishna.bingi@exusia.com"
-request1:
-    conditions:
-        attributeFilter:
-            - attributeTypeEquals: "Prioritized Attribute"
-            - attributeValueEquals: "Yes"
-    outputResult:
-        Asset Details: 
-            - Asset Name
-            - Community
-            - Domain
-            - Asset Type
-        Attributes: All
-        Relations: All
-        Complex Relations: All  
-    outputFileName: 'request2'
-    email: "srikrishna.bingi@exusia.com"
-request3:
-    conditions:
-        assetNameLike: "Amortized" 
-    outputResult:
-        Asset Details: 
-            - Asset Name
-            - Community
-            - Domain
-            - Asset Type
-        Attributes: All
-        Relations: All
-        Complex Relations: All  
-    outputFileName: 'request11'
-    email: "srikrishna.bingi@exusia.com"
+# request1:
+    # conditions:
+        # attributeFilter:
+            # - attributeTypeEquals: "Prioritized Attribute"
+            # - attributeValueEquals: "Yes"
+    # outputResult:
+        # Asset Details: 
+            # - Asset Name
+            # - Community
+            # - Domain
+            # - Asset Type
+        # Attributes: All
+        # Relations: All
+        # Complex Relations: All  
+    # outputFileName: 'request1'
+    # email: "srikrishna.bingi@exusia.com"
+# request2:
+    # conditions:
+        # Or:
+            # assetNameLike: "Discounts"
+            # attributeFilter:
+                # - attributeTypeEquals: "Prioritized Attribute"
+                # - attributeValueEquals: "Yes"
+            # assetNameEquals: "Account"
+    # outputResult:
+        # Asset Details: 
+            # - Asset Name
+            # - Community
+            # - Domain
+            # - Asset Type
+        # Attributes: All
+        # Relations: All
+        # Complex Relations: All  
+    # outputFileName: 'request2'
+    # email: "srikrishna.bingi@exusia.com"
+# request3:
+    # conditions:
+        # assetNameLike: "Amortized" 
+    # outputResult:
+        # Asset Details: 
+            # - Asset Name
+            # - Community
+            # - Domain
+            # - Asset Type
+        # Attributes: All
+        # Relations: All
+        # Complex Relations: All  
+    # outputFileName: 'request3'
+    # email: "srikrishna.bingi@exusia.com"
