--- a/ParameterFiles/genericExtracts.yaml
+++ b/ParameterFiles/genericExtracts.yaml
@@ -1,9 +1,15 @@
 request1:
     conditions:
-        assetNameIn:
-            - "FRY 14 Q"
-            - "01. Amortized Cost (USD Equivalent)"
-            - "Amortized Cost (USD Equivalent)"
+        relationFilter:
+            RelationTypeIn:
+                - "Contains"
+                - "Consists of"
+                - "May consists of"
+            AssetType:
+                - "Report"
+                - "Schedule"
+                - "Section"
+                - "Data Point"
     outputResult:
         Asset Details: 
             - Asset Name
@@ -14,6 +20,28 @@ request1:
         Relations: All
         Complex Relations: None  
     outputFileName: 'request1'
+    email: "srikrishna.bingi@exusia.com"
+request2:
+    conditions:
+        relationFilter:
+            RelationTypeIn:
+                - "Contains"
+                - "Consists of"
+                - "May consists of"
+            AssetType:
+                - "Report"
+                - "Schedule"
+                - "Section"
+    outputResult:
+        Asset Details: 
+            - Asset Name
+            - Community
+            - Domain
+            - Asset Type
+        Attributes: All
+        Relations: All
+        Complex Relations: None  
+    outputFileName: 'request2'
     email: "srikrishna.bingi@exusia.com"
 # request1:
     # conditions:
@@ -63,4 +91,21 @@ request1:
         # Relations: All
         # Complex Relations: All  
     # outputFileName: 'request3'
+    # email: "srikrishna.bingi@exusia.com"
+# request4:
+    # conditions:
+        # assetNameIn:
+            # - "FRY 14 Q"
+            # - "01. Amortized Cost (USD Equivalent)"
+            # - "Amortized Cost (USD Equivalent)"
+    # outputResult:
+        # Asset Details: 
+            # - Asset Name
+            # - Community
+            # - Domain
+            # - Asset Type
+        # Attributes: All
+        # Relations: All
+        # Complex Relations: None  
+    # outputFileName: 'request4'
     # email: "srikrishna.bingi@exusia.com"
