--- a/ParameterFiles/genericExtracts.yaml
+++ b/ParameterFiles/genericExtracts.yaml
@@ -1,11 +1,10 @@
 request1:
     conditions:
-        assetNameLike: "Accretion of discount"
-        # complexRelationFilter:
-            # complexRelationName:
-                # - "Derivation"
-            # AssetType:
-                # - "Data Element"
+        complexRelationFilter:
+            complexRelationName:
+                - "Derivation"
+            AssetType:
+                - "Data Element"
     outputResult:
         Asset Details: 
             - Asset Name
