--- a/ParameterFiles/genericExtracts.yaml
+++ b/ParameterFiles/genericExtracts.yaml
@@ -1,17 +1,17 @@
-# request1:
-    # conditions:
-        # assetNameEquals: "01. Amortized Cost (USD Equivalent)" 
-    # outputResult:
-        # Asset Details: 
-            # - Asset Name
-            # - Community
-            # - Domain
-            # - Asset Type
-        # Attributes: All
-        # Relations: All
-        # Complex Relations: All  
-    # outputFileName: 'request1'
-    # email: "srikrishna.bingi@exusia.com"
+request1:
+    conditions:
+        assetNameEquals: "01. Amortized Cost (USD Equivalent)" 
+    outputResult:
+        Asset Details: 
+            - Asset Name
+            - Community
+            - Domain
+            - Asset Type
+        Attributes: All
+        Relations: All
+        Complex Relations: All  
+    outputFileName: 'request1'
+    email: "srikrishna.bingi@exusia.com"
 request2:
     conditions:
         complexRelationFilter:
