--- a/ParameterFiles/metrics.yml
+++ b/ParameterFiles/metrics.yml
@@ -1,14 +1,19 @@
 request1:
-    #"Adoption":
-        #"AssetType": "OutModule1.json"
-        #"Community": "OutModule2.json"
-        #"Domain": "OutModule2.json"
-        #"Status": "OutModule3.json"
-        #"PrioritizedAsset": "OutModule4.json"
-    "Completion":
-        attributeFilter:
-            attributeTypeEquals: "Prioritized Attribute"
-            attributeValueEquals: "Yes"
+    Adoption-Category:
+        AssetType: "OutModule1.json"
+        Community: "OutModule2.json"
+        Domain: "OutModule2.json"
+        Status: "OutModule3.json"
+        PrioritizedAsset: "OutModule4.json"
+    Completion-Category:
+        conditions:
+            assetNameLike: "Amortized" 
+        outputResult:
+            Asset Details: 
+                - Asset Name
+                #- Community
+                #- Domain
+                #- Asset Type
     outputFileName: 'request1'
     email: "srikrishna.bingi@exusia.com"
 # request2:
