--- a/ParameterFiles/metrics.yml
+++ b/ParameterFiles/metrics.yml
@@ -1,11 +1,5 @@
 request1:
-    Adoption-Category:
-        AssetType: "OutModule1.json"
-        Community: "OutModule2.json"
-        Domain: "OutModule2.json"
-        Status: "OutModule3.json"
-        PrioritizedAsset: "OutModule4.json"
-    Completion-Category:
+    Process-Category:
         conditions:
             assetNameLike: "Amortized" 
         outputResult:
@@ -16,6 +10,18 @@ request1:
                 #- Asset Type
     outputFileName: 'request1'
     email: "srikrishna.bingi@exusia.com"
+# request1:
+    # Process-Category:
+        # conditions:
+            # assetNameLike: "Amortized" 
+        # outputResult:
+            # Asset Details: 
+                # - Asset Name
+                # #- Community
+                # #- Domain
+                # #- Asset Type
+    # outputFileName: 'request1'
+    # email: "srikrishna.bingi@exusia.com"
 # request2:
     # conditions:
         # complexRelationFilter:
@@ -167,4 +173,22 @@ request1:
         # Relations: All
         # Complex Relations: None  
     # outputFileName: 'request2'
+    # email: "srikrishna.bingi@exusia.com"
+# request7:
+    # Adoption-Category:
+        # AssetType: "OutModule1.json"
+        # Community: "OutModule2.json"
+        # Domain: "OutModule2.json"
+        # Status: "OutModule3.json"
+        # PrioritizedAsset: "OutModule4.json"
+    # Completion-Category:
+        # conditions:
+            # assetNameLike: "Amortized" 
+        # outputResult:
+            # Asset Details: 
+                # - Asset Name
+                # #- Community
+                # #- Domain
+                # #- Asset Type
+    # outputFileName: 'request1'
     # email: "srikrishna.bingi@exusia.com"
