--- a/ParameterFiles/metrics.yml
+++ b/ParameterFiles/metrics.yml
@@ -1,25 +1,25 @@
 collibraTempFolder: "C:/collibra_data/dgc/temp-files"
 outputFolder: "K:/Git Code/Python/Output/"
-# request4: 
-    # Adoption-Category: 
-        # AssetType: "K:/Git Code/Python/ParameterFiles/Metrics/OutModule1.json"
-        # Metrics: "Percentage"
-    # outputFileName: 'request4'
-    # email: "srikrishna.bingi@exusia.com"  
-# request5: 
-    # Completion-Category:
-        # FilterCriteria:
-            # conditions:
-                # assetNameLike: "Amortized" 
-            # outputResult:
-                # Asset Details: 
-                    # - Asset Name
-                    # #- Community
-                    # #- Domain
-                    # #- Asset Type
-        # Metrics: "Count"
-    # outputFileName: 'request4'
-    # email: "srikrishna.bingi@exusia.com"   
+request4: 
+    Adoption-Category: 
+        AssetType: "K:/Git Code/Python/ParameterFiles/Metrics/OutModule1.json"
+        Metrics: "Percentage"
+    outputFileName: 'request4'
+    email: "srikrishna.bingi@exusia.com"  
+request5: 
+    Completion-Category:
+        FilterCriteria:
+            conditions:
+                assetNameLike: "Amortized" 
+            outputResult:
+                Asset Details: 
+                    - Asset Name
+                    #- Community
+                    #- Domain
+                    #- Asset Type
+        Metrics: "Count"
+    outputFileName: 'request4'
+    email: "srikrishna.bingi@exusia.com"   
 request6: 
     Process-Category:
         FilterCriteria:
@@ -34,19 +34,19 @@ request6:
         Metrics: "Percentage"
     outputFileName: 'request4'
     email: "srikrishna.bingi@exusia.com"    
-# request7: 
-    # Issue-Category:
-        # Priority: "K:/Git Code/Python/ParameterFiles/Issues JSONs/ByCommunityDomainAssetTypeSourcesPriority.json"
+request7: 
+    Issue-Category:
+        Priority: "K:/Git Code/Python/ParameterFiles/Issues JSONs/ByCommunityDomainAssetTypeSourcesPriority.json"
         # Community: "K:/Git Code/Python/ParameterFiles/Issues JSONs/ByCommunityDomainAssetTypeSourcesCommunity.json"
-        # Status: "K:/Git Code/Python/ParameterFiles/Issues JSONs/ByCommunityDomainAssetTypeSourcesStatus.json"
-    # outputFileName: 'request3'
-    # email: "srikrishna.bingi@exusia.com"
-# request8: 
-    # Quality-Category: 
-        # paramFile: "K:/Git Code/Python/ParameterFiles/QualityJSON.json"
-        # metrics: "Counts"
-    # outputFileName: 'request4'
-    # email: "srikrishna.bingi@exusia.com"
+        # AssetStatus: "K:/Git Code/Python/ParameterFiles/Issues JSONs/ByCommunityDomainAssetTypeSourcesStatus.json"
+        Metrics: "Percentage"
+    outputFileName: 'request3'
+    email: "srikrishna.bingi@exusia.com"
+request8: 
+    Quality-Category: 
+        paramFile: "K:/Git Code/Python/ParameterFiles/QualityJSON.json"
+    outputFileName: 'request4'
+    email: "srikrishna.bingi@exusia.com"
 # PeterChoe: 
     # Activity-Category: '2016-10-11 12:34:00'
     # outputFileName: 'request2'
