--- a/Elasticsearch/elasticsearch.yml
+++ b/Elasticsearch/elasticsearch.yml
@@ -1,6 +1,6 @@
 request1: 
-    index: 'bulkindex2'
-    docType: 'bulktype2'
-    inputFile: '/media/legolas/Softwares/Git Code/Python/Elasticsearch/wine-reviews/winemag-data-130k-v2.csv'
+    index: 'ruletest02152018'
+    docType: 'ruletest'
+    inputFile: '/media/legolas/Softwares/Git Code/Python/Elasticsearch/wine-reviews/rule-result.csv'
     tempFile: '/media/legolas/Softwares/Git Code/Python/Elasticsearch/wine-reviews/temp.txt'
     commitInterval: 1
